--- a/client-http/index.html
+++ b/client-http/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta content="utf-8" http-equiv="encoding">
         <meta name="viewport" content="initial-scale=1, minimum-scale=1, maximum-scale=1"/>
         <style>
             :root {
